--- a/src/apollo/zimbabwe/templates/core/layout.html
+++ b/src/apollo/zimbabwe/templates/core/layout.html
@@ -13,7 +13,7 @@
     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/table-fixed-header.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
     {% block stylesheets %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/select2.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datepicker.js"></script>
